# alfred-gitmoji

./: .gitignore  README-ko.md  README.md  alfred-gitmoji.alfredworkflow  create.zsh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: codecov.yaml  scorecard.yml
src/: info-py.plist  info-zsh.plist  workflowscript.py  workflowscript.zsh  workflowscript_each.bash  workflowscript_each.py.bak
src/gitmojis/: generate-gitmoji-icons.py
src/gitmojis/assets/: gitmojis.json
tests/: test_workflowscript.py
